--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,12 +2,12 @@
 <resources>
 
     <string name="app_name">AndConLab</string>
+    <string name="actionbar_label"></string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="list_item_empty_message">What are you looking for?</string>
     <string name="thumbnail_image_description">This is the thmbnail for a single list item.</string>
 
-    <string name="menu_settings">Settings</string>
     <string name="connectivity_dialog_message">No internet connection found!</string>
 	<string name="connectivity_dialog_title">Please connect to the internet in order to use our great app.</string>
 	
@@ -18,10 +18,19 @@
 	
 	<string name="toast_no_items">No items found</string>
 	
-	<string name="default_title">I am a title!</string>
-	<string name="default_description">I am a description.</string>
-	<string name="default_thumbnail_url"></string>
+	<string name="default_text">I am a default text!</string>
+	<string name="default_url"></string>
 	
 	<string name="ok">OK</string>
 	<string name="error_player">player error.</string>
+	<string name="default_lecturer_name">This is a lecturer name</string>
+	<string name="default_lecture_title">This is a lecture title, it should be long just to see what happens</string>
+	<string name="provider_authority">com.gdg.andconlab.ItemColumns</string>
+	
+	<string name="lecturer_name">Lecturer:</string>
+	<string name="lecture_title">Lecture title:</string>
+	<string name="lecture_description">Description:</string>
+	<string name="links">Links:</string>
+	<string name="video">Video:</string>
+	<string name="slides">Slides:</string>
 </resources>
