--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="menu_settings">Settings</string>
     <string name="list_item_empty_message">What are you looking for?</string>
     <string name="thumbnail_image_description">This is the thmbnail for a single list item.</string>
-    <string name="connectivity_dialog_message">No internet connection found!</string>
+    <string name="connectivity_dialog_message">No internet connection found</string>
     <string name="connectivity_dialog_title">Please connect to the internet in order to use our great app.</string>
     <string name="progress_dialog_starting_title">Please wait.</string>
     <string name="progress_dialog_starting_message">starting up...</string>
